2000-04-11  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Simplify all the `foo="$bar"' into `foo=$bar'.
	* acspecific.m4: Likewise.
	* aclang.m4: Likewise.

2000-04-11  Akim Demaille  <akim@epita.fr>

	Move obsolete macros' definitions out of the way.

	* doc/autoconf.texi (Old Macro Names): Rename as...
	(Old Macros): this.  Change the @table enumeration into a list of
	@defmac.
	(AC_CHECKING, AC_CHECK_TYPE, AC_COMPILE_CHECK, AC_C_CROSS,
	AC_DYNIX_SEQ, AC_HAVE_LIBRARY, AC_IRIX_SUN, AC_LINK_FILES,
	AC_OUTPUT, AC_OUTPUT_COMMANDS, AC_SCO_INTL, AC_VERBOSE,
	AC_XENIX_DIR): Move their descriptions into here.
	Kill a few TeX warnings.

2000-04-11  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_MSG_ERROR_UNQUOTED): Remove.
	(AC_MSG_RESULT, AC_MSG_RESULT_UNQUOTED): Output to the log too.
	(AC_CHECKING, AC_VERBOSE): AU_ define.

2000-04-07  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4:	s/1>&/>&/g.
	(AC_FD_LOG): New macro, replaces...
	(AC_FD_CC): this.  Provide an AU definition.
	(_AC_ECHO_UNQUOTED, _AC_ECHO_N): Use m4_default.

2000-04-05  Akim Demaille  <akim@epita.fr>

	At the end of `./configure', save the cache values, and the CPP
	values.

	* acgeneral.m4 (_AC_CACHE_DUMP): New macro.
	(AC_CACHE_SAVE, AC_OUTPUT): Use it.
	(AC_OUTPUT): Dump confdefs.h into config.log.
	(_AC_INIT_PREPARE::config.log): Name the package being configured
	if you can.

2000-04-05  Steven G. Johnson  <stevenj@alum.mit.edu>

	Disable caching by default, so as not to cause problems when
	newbies accidentally use a stale cache file.

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Set cache_file to /dev/null
	to disable caching by default.
	(_AC_INIT_HELP): Adjust the --help message.
	(AC_CACHE_LOAD, AC_CACHE_SAVE): Don't print "loading/updating
	/dev/null" messages.
	* autoconf.texi: Note that caching is disabled, how to enable it,
	and that `./config.cache' is the traditional name of the cache file.
	* install.texi: Likewise.

2000-04-03  Akim Demaille  <akim@epita.fr>
